[tool.poetry]
name = "hexpex"
version = "0.1.0"
description = "A type-hinted, object-oriented Python implementation for working with hex grids"
authors = ["solbero <njord.solberg@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/solbero/hexpex"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.0"
pre-commit = "^2.20.0"
tox = "^3.25.1"
scriv = { extras = ["toml"], version = "^0.16.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.coverage.run]
source = [".hexpex", ".tox/*/site-packages"]

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.bandit]
skips = ["B101"]

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"
