[tool.poetry]
name = "hexpex"
version = "0.2.3"
description = "A type-hinted, object-oriented Python implementation for working with hex grids"
authors = ["solbero <njord.solberg@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/solbero/hexpex"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.0"
tox = "^4.10.0"
scriv = {extras = ["toml"], version = "^1.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.coverage.run]
source = [".hexpex", ".tox/*/site-packages"]

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.bandit]
skips = ["B101"]

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"
